@@ -154,7 +154,10 @@ BUG FIXES
 
     o	package.skeleton() missed the first newline in the DESCRIPTION file.
 
-    o   pbirthday reported p=1 too often when coincident>2
+    o   pbirthday() reported p=1 too often when coincident>2
+
+    o	plot(1:3, exp(1:3), log = "y", ylim = c(30,1)) {reversed log-scale axis}
+	now works, based on Uwe Ligges' suggestions.  (PR#7894)
 
 
 
